[tool.poetry]
name = "qa-guru-python-3-17"
version = "0.1.0"
description = ""
authors = ["Aleksandr Privalov <obojealexander@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_python_3_17"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
selene = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
